# Connect-NCP-Host

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  connecthost.pc.in
app/: CMakeLists.txt  README.md  app_cli.cpp  app_cli.h  app_common.c  app_common.h  app_init.c  app_init.h  app_process.c  cli_commands.cpp  cli_commands.h  main.cpp
app/inc/: sl_connect_sdk_ota_bootloader_test_common.h
connect/: callback_dispatcher.h  crypto-types.h  ember-types.h  ember.h  error.h  message.h  ncp.h  network-management.h  ota-unicast-bootloader-server.h  stack-info.h  version.h
inc/: lib-connect-ncp.h
src/: CMakeLists.txt
src/csp/: csp-api-enum-gen.h  csp-command-app.c  csp-command-callbacks.c  csp-command-utils.h  csp-format.c  csp-format.h
src/host-common/: callback-queue.c  callback-queue.h  cpc-host.c  cpc-host.h  lib-init.c  ncp-host-common.c  ncp-host-common.h
src/include/: lib-connect-ncp.h
src/log/: backtrace_show.c  backtrace_show.h  log.c  log.h
src/ota-unicast-bootloader/ota-unicast-bootloader-server/: ota-unicast-bootloader-server-cb.c  ota-unicast-bootloader-server-internal.h  ota-unicast-bootloader-server.c
src/stack/config/: config.h
src/stack/framework/: byte-utilities.c  callback_dispatcher.c  callback_dispatcher.h
src/stack/include/: byte-utilities.h  ember-types.h  ember.h  error.h  network-management.h
